Update changelog for version 1.2.0.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
 Udon changelog
 ==============
 
-Edge
-----
+Version 1.2.0
+-------------
 
 * Added `id`, `concat`, `sum`, `product`, `elem`, `notElem`, `reverse`,
   `intersperse` and `intercalate` functions.
