--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,15 @@
 Udon changelog
 ==============
 
+Version 1.3.0
+-------------
+
+* Added more list functions: `and`, `append`, `break`, `concatMap`, `cons`,
+  `drop`, `dropWhile`, `elemIndex`, `empty`, `equal`, `find`, `findIndex`,
+  `foldr1`, `head`, `init`, `inits`, `last, `length`, `or`, `permutations`,
+  `scanl`, `scanl1`, `scanr`, `scanr1`, `span`, `splitAt`, `subsequences`,
+  `tail`, `tails`, `take`, `takeWhile`, `transpose`.
+
 Version 1.2.0
 -------------
 
